generate words screen created